Bug 94453 - dEQP-GLES3.functional.clipping.line.wide_line_clip_viewport_{center,corner} fail
Summary: dEQP-GLES3.functional.clipping.line.wide_line_clip_viewport_{center,corner} fail
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
: 92372 (view as bug list)
Depends on:
Blocks: i965-deqp
  Show dependency treegraph
 
Reported: 2016-03-09 01:12 UTC by Kenneth Graunke
Modified: 2019-03-14 08:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Kenneth Graunke 2016-03-09 01:12:55 UTC
The dEQP-GLES3.functional.clipping.line.wide_line_clip_viewport_center and dEQP-GLES3.functional.clipping.line.wide_line_clip_viewport_corner test cases both fail.

However, dEQP-GLES3.functional.clipping.line.wide_line_clip passes.
Comment 1 Kenneth Graunke 2016-03-09 09:52:29 UTC
Disabling "Viewport XY Clip Test Enable" (GEN6_CLIP_TEST_XY) in 3DSTATE_CLIP makes these tests pass.  It seems like they're getting clipped away by the viewport.
Comment 2 Kenneth Graunke 2016-03-11 00:20:06 UTC
I have a 5 patch series which fixes these bugs.  I'll send it to the list as soon as it passes regression testing.
Comment 3 Kenneth Graunke 2016-03-11 01:36:28 UTC
Starting at:
https://lists.freedesktop.org/archives/mesa-dev/2016-March/109702.html
Comment 4 Kenneth Graunke 2016-03-19 06:54:45 UTC
Fixed in master with:

commit 88d28aa4d9edec33ef7bcf1f56b77fbb756a24f8
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Mar 10 14:36:25 2016 -0800

    i965: Stop XY clipping point and line primitives.

commit 0de64ab7881cc4d343fecf8a2b5b9b9ca7b34416
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Mar 10 15:30:36 2016 -0800

    i965: Scissor to the viewport when rendering points/lines.

commit d000a4989f66921832a33742ea07fa191393231b
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Mar 10 16:04:01 2016 -0800

    i965: Include the viewport in the scissor rectangle.
Comment 5 Kenneth Graunke 2016-03-26 09:48:00 UTC
*** Bug 92372 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.